--- a/elastic-cross.tex
+++ b/elastic-cross.tex
@@ -5,6 +5,6 @@
 \includegraphics[width=\maxwidth]{figure/robust:cr-elastic-1} 
 
 \end{knitrout}
-    \caption{Varying number of elastic cross traffic flows.}
+    \caption{Varying number of competing elastic cross traffic flows. As before, \name's traffic offers 84Mbps of load, with one persistently backlogged connection.}
     \label{fig:robust:cr-elastic}
 \end{figure}
