--- a/graphs/overview-benefits.Rnw
+++ b/graphs/overview-benefits.Rnw
@@ -1,6 +1,6 @@
 \begin{figure}
     \centering
-<<eval:best,fig.showtext=TRUE,cache=TRUE,echo=FALSE,message=FALSE,warning=FALSE,fig.width='\\columnwidth',fig.height=4>>=
+<<eval:best,fig.showtext=TRUE,cache=TRUE,echo=FALSE,message=FALSE,warning=FALSE,fig.width='\\columnwidth',fig.height=3>>=
 library(ggplot2)
 library(showtext)
 font_add_google("Lato")
@@ -22,7 +22,7 @@ ggplot(small, aes(
     )) +
     geom_boxplot(show.legend=FALSE,outlier.shape=NA) +
     ylab("Slowdown") +
-    ggtitle("< 10KB") +
+    ggtitle("Small\n< 10KB") +
     scale_fill_brewer(type="qual", palette=2) +
     scale_x_discrete(
         limit=c("nobundler_fifo", "copa_sfq", "nobundler_sfq"),
@@ -36,18 +36,24 @@ ggplot(small, aes(
     coord_cartesian(ylim=c(1,4)) +
     theme_minimal() + 
     theme(
-        legend.position="top",
-        legend.title=element_blank(),
-        text = element_text(angle=30,size=18, family="Lato", face="bold"),
+        axis.text.x=element_blank(),
+        text = element_text(angle=0,size=18, family="Lato", face="bold"),
         plot.title = element_text(angle=0,size=18, family="Lato", face="bold", hjust = 0.5)
     ) +
 ggplot(med, aes(
         x=Alg, fill=Alg, y=Slowdown
     )) +
-    geom_boxplot(show.legend=FALSE,outlier.shape=NA) +
+    geom_boxplot(outlier.shape=NA) +
     ylab(NULL) +
-    ggtitle("10KB - 1MB") +
-    scale_fill_brewer(type="qual", palette=2) +
+    ggtitle("Medium\n10KB - 1MB") +
+    scale_fill_brewer(type="qual", palette=2,
+        limit=c("nobundler_fifo", "copa_sfq", "nobundler_sfq"),
+        labels=c(
+            "nobundler_fifo" = "Status Quo  ",
+            "copa_sfq" = "Bundler  ", 
+            "nobundler_sfq" = "In-Network"
+        )
+    ) +
     scale_x_discrete(
         limit=c("nobundler_fifo", "copa_sfq", "nobundler_sfq"),
         labels=c(
@@ -60,32 +66,34 @@ ggplot(med, aes(
     coord_cartesian(ylim=c(1,5)) +
     theme_minimal() + 
     theme(
-        legend.position="top",
+        legend.position="bottom",
         legend.title=element_blank(),
-        text = element_text(angle=30,size=18, family="Lato", face="bold"),
+        axis.text.x=element_blank(),
+        text = element_text(angle=0,size=18, family="Lato", face="bold"),
         plot.title = element_text(angle=0,size=18, family="Lato", face="bold", hjust = 0.5)
     ) +
 ggplot(big, aes(
         x=Alg, fill=Alg, y=Slowdown
     )) +
     geom_boxplot(show.legend=FALSE,outlier.shape=NA) +
-    ylab(NULL) + ggtitle("> 1MB") +
-    scale_fill_brewer(type="qual", palette=2) +
-    scale_x_discrete(
-        limit=c("nobundler_fifo", "copa_sfq", "nobundler_sfq"),
+    ylab(NULL) + ggtitle("Large\n> 1MB") +
+    scale_fill_brewer(type="qual", palette=2,
         labels=c(
             "nobundler_fifo" = "Status Quo",
             "copa_sfq" = "Bundler", 
             "nobundler_sfq" = "In-Network"
-        ),
+        )
+    ) +
+    scale_x_discrete(
+        limit=c("nobundler_fifo", "copa_sfq", "nobundler_sfq"),
         scale_name=NULL, name=NULL
     ) +
     coord_cartesian(ylim=c(1,15)) +
     theme_minimal() + 
     theme(
-        legend.position="top",
-        legend.title=element_blank(),
-        text = element_text(angle=30,size=18, family="Lato", face="bold"),
+        legend.position = "bottom",
+        axis.text.x=element_blank(),
+        text = element_text(angle=0,size=18, family="Lato", face="bold"),
         plot.title = element_text(angle=0,size=18, family="Lato", face="bold", hjust = 0.5)
     )
 
@@ -93,7 +101,7 @@ overview_benefits_bundler_results = quantile(df[df$Alg=="copa_sfq",]$Slowdown, c
 overview_benefits_baseline_results = quantile(df[df$Alg=="nobundler_fifo",]$Slowdown, c(0.5, 0.99))
 overview_benefits_optimal_results = quantile(df[df$Alg=="nobundler_sfq",]$Slowdown, c(0.5, 0.99))
 @
-    \caption{\name achieves \Sexpr{round(100*(1-(overview_benefits_bundler_results[1] / overview_benefits_baseline_results[1])), 0)}\% lower median slowdown. The three graphs show FCT distributions for the indicated request sizes: smaller than 10KB, between 10KB and 1MB, and greater than 1MB.  Note the different y-axis scales for each group of request sizes. For both \name and Optimal, performance benefits come from preventing short flows from queueing behind long ones.}
+    \caption{\name achieves \Sexpr{round(100*(1-(overview_benefits_bundler_results[1] / overview_benefits_baseline_results[1])), 0)}\% lower median slowdown. The three graphs show FCT distributions for the indicated request sizes: smaller than 10KB, between 10KB and 1MB, and greater than 1MB.  Note the different y-axis scales for each group of request sizes. Whiskers show $1.25 \times$ the inter-quartile range. For both \name and Optimal, performance benefits come from preventing short flows from queueing behind long ones.}
     \label{fig:eval:best}
 \end{figure}
 \newcommand{\overviewBenefitsBaselineMedian}{\Sexpr{round(overview_benefits_baseline_results[1], 2)}\xspace}
