--- a/varying-offered-load.tex
+++ b/varying-offered-load.tex
@@ -8,3 +8,7 @@
     \caption{\name offers diminishing returns with lower amounts of offered load.}
     \label{fig:eval:offeredload}
 \end{figure}
+%
+\newcommand{\highUtilTailImprove}{-1\%\xspace}
+\newcommand{\medUtilTailImprove}{-1\%\xspace}
+\newcommand{\lowUtilTailImprove}{0\%\xspace}
