--- a/intro.tex
+++ b/intro.tex
@@ -29,7 +29,9 @@ ISPs, on the other hand, do control the bottleneck links in their carrier networ
 %, they have no way of knowing whether it was done appropriately. 
 
 %So to summarize, while customers may not have enough control over the queued-up links in the network to effectively enforce their desired policies, the ISPs may not have enough incentives or enough visibility into the traffic to do so. 
-To reduce a content provider's dependence on the ISPs with respect to how its traffic is managed, we attempt to bring the provider's traffic under its own control by \emph{moving the queues that its traffic would build at a downstream bottleneck to the provider's edge}. Our approach, allows the content provider to enforce its desired traffic management policies across traffic that share common sender and receiver domains (as described in \S\fc{X}). The natural question that arises is, how can the queues be ``moved''? This is the primary focus of our work. 
+To reduce a content provider's dependence on the ISPs with respect to how its traffic is managed, we attempt to bring the provider's traffic under its own control by \emph{moving the queues that its traffic would build at a downstream bottleneck to the provider's edge}. Our approach allows the content provider to enforce its desired traffic management policies across traffic that share common sender and receiver domains.
+%(as described in \S\fc{X}). 
+The natural question that arises is, how can the queues be ``moved''? This is the primary focus of our work. 
 
 We observe that the \emph{component flows} of the traffic from a given sender's domain, destined for the same downstream domain are likely to share common bottlenecks within the network. Examples include traffic between a large content provider (\eg Amazon, Google, etc.) and a network with many clients (e.g. an enterprise), between two different campuses of an organization, between collaborating institutes, and so on. By (i) aggregating such component flows into a single \emph{bundle} at the sender's egress, and (ii) controlling the outgoing rate of this bundle to match its bottleneck rate in the network, we can effectively \emph{move} the queues built by the traffic in the bundle, from within the network, to the sender's egress itself. 
 %\radhika{is the last sentence too long / hard to understand? suggestions for fixing it?} 
@@ -39,11 +41,11 @@ We propose a new type of middlebox, called \name, that (1) aggregates the traffi
 
 %\radhika{add a few lines on \name's high level architecture.} 
 %\fc{is it not bad to bring up the two-box design here if we don't justify it until later?}
- \name is made up of a pair of middleboxes: a \emph{\inbox} that sits at the sender's egress and a \emph{\outbox} that sits at the receiver's ingress. A \emph{bundle} is a group of flows traversing through the same \inbox{}-\outbox{} pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox to measure congestion signals, such as the round-trip time, and the rate at which packets are received. These signals are used by a standard congestion control algorithm (\reword{having certain properties}, as described in \S\ref{s:design}) that runs at the \inbox and computes appropriate sending rates for each bundle. The sending rates are computed such that the queuing induced by the bundled traffic within the network is minimized and is incurred at the \inbox instead, while ensuring that the bottleneck link in the network remains fully utilized. 
+ \name is made up of a pair of middleboxes: a \emph{\inbox} that sits at the sender's egress and a \emph{\outbox} that sits at the receiver's ingress. A \emph{bundle} is a group of flows traversing through the same \inbox{}-\outbox{} pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox to measure congestion signals, such as the round-trip time, and the rate at which packets are received. These signals are used by a congestion control algorithm (with certain properties described in \S\ref{s:design}) that runs at the \inbox and computes appropriate sending rates for each bundle. The sending rates are computed such that the queuing induced by the bundled traffic within the network is low and is incurred at the \inbox instead, while ensuring that the bottleneck link on the path remains fully utilized. 
  
- We introduce a novel light-weight methodology for the coordination between the \inbox and the \outbox, which does not require any per-flow state (only per-bundle state), and does not require any modifications to the packets traversing the \name boxes. Furthermore, our approach only requires introducing the \name boxes at the customer's edge, and requires no changes to the individual end-hosts (unless needed for a specific scheduling policy, \eg adding priority values to packet headers) or to the routers in the network. 
+ We introduce a lightweight method for the coordination between the \inbox and the \outbox, which does not require any per-flow state, nor any modifications to the packets traversing the \name boxes. Our approach only requires introducing the \name boxes at the content provider's edge, and requires no changes to the end hosts or to the routers in the network. 
  
- Note that our goal is to perform scheduling and queue management only on the traffic within the same bundle. We do not attempt to control traffic across different bundles. Furthermore, as we will discuss later, there can be instances where \name does not improve performance for the bundled traffic, and falls back to the status quo performance. Nonetheless, we believe that our work, provides a deployable solution for enabling some of the benefits of scheduling and queue management in the Internet from the edge of the content provider's network.
+ Note that our goal is to perform scheduling and queue management only on the traffic within the same bundle. We do not attempt to control traffic across different bundles. Furthermore, as we will discuss later, there may be instances where \name does not improve performance for the bundled traffic, and falls back to the status quo performance. Despite these limitations, we believe that our work, provides a deployable solution for enabling some of the benefits of scheduling and queue management in the Internet from the edge of the content provider's network.
  
  \fc{list contributions}
  %\radhika{should i move it up by 2 paragraphs (i.e. right after the 3 points)?} 
